Added fade-in to posts, added a redirect to sign-in and sign-out pages so that they return to the homepage after successful actions

--- a/home-style.css
+++ b/home-style.css
@@ -40,7 +40,16 @@ body {
 
 }
 
+@keyframes fadein{
+
+  from{opacity:0.0;}
+  to{opacity:1.0;}
+
+}
 .user-post {
+
+  animation-name: fadein;
+  animation-duration:1s;
 
   background-color: white;
   box-shadow: 1px 1px 1px grey;
