--- a/home-style.css
+++ b/home-style.css
@@ -7,10 +7,9 @@ body {
 
 #site-header {
 
-  background-color: rgba(50, 100, 255, 0.7);
+  background-color: #007252;
   box-shadow: 0px 0px 2px 3px grey;
   padding: 0.6em;
-
   font-family: 'Exo 2', sans-serif;
   border-radius: 0;
 
@@ -36,9 +35,6 @@ body {
 
 }
 
-#feed-block {
-
-}
 
 @keyframes fadein{
 
@@ -89,7 +85,7 @@ body {
 #submit-post-btn, #sign-in-btn, #sign-out-btn, #register-btn, #user-display {
 
   width:100%;
-  background-color: rgba(50, 100, 255, 0.7);
+  background-color: #FF7800;
 
   border: none;
   margin-bottom: 15px;
